--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col"></div>
     <div class="col">
-      <h4 class="text-center">Login</h4>
+      <h4 class="text-center text-light">Login</h4>
       <form action=/login method="POST">
         <div class="form-group" method> 
               
